--- a/src/main/webapp/view/css/index.css
+++ b/src/main/webapp/view/css/index.css
@@ -327,18 +327,56 @@ tbody tr {
   cursor:pointer;
 }
 
-.hidden-box ul{
-  list-style-type:none;
-  color:#fff;cursor:pointer;
-  padding-top:12px;
-  padding-bottom:15px
+.dropDate {
+  position: absolute;
+  margin-top: 15px;
+  margin-left: -22px;
+  width: 100px;
+  text-align: center;
+  padding-top: 90px;
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: #0078ff;
+}
+.point {
+  width: 13px;
+  height: 12px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  position: absolute;
+  top: -7px;
+  left: 42px;
+  background-color: #0078ff;
 }
 
-.hidden-box ul,li {
-  line-height:30px;
-  height:30px;
-  font-weight:500
+.dropDate span#s1 {
+  margin: 0;
+  position: absolute;
+  display: block;
+  top: 15px;
+  left: 9px;
+  height: 25px;
+  line-height: 28px;
+  text-align: center;
+  padding: 0 5px;
+  background-color: #3091ff;
+  width: 72px;
 }
-
-/*隐藏盒子位置设置*/
-.hidden-loc-index{left:284px}
+.dropDate span#s2 {
+  margin: 0;
+  position: absolute;
+  display: block;
+  top: 48px;
+  left: 9px;
+  height: 25px;
+  line-height: 28px;
+  text-align: center;
+  padding: 0 5px;
+  background-color: #3091ff;
+  width: 72px;
+}
