--- a/src/main/webapp/view/plugin/phone.css
+++ b/src/main/webapp/view/plugin/phone.css
@@ -34,7 +34,8 @@
 
 .a-font {
     color: #d0e6ff !important;
-    padding: 0 !important;
+    padding-left: 12px !important;
+    padding-right: 12px !important;
 }
 
 .a-font:hover {
